# rotor-http

./: .gitignore  .travis.yml  Cargo.toml  README.rst  index.html  search-index.js  vagga.yaml
examples/: client.rs  hello_world_server.rs  threaded.rs  threaded_reuse_port.rs  threaded_with_shared_counter.rs  todobackend.rs  two_servers.rs  two_servers_macro.rs
implementors/rand/: trait.Rng.js  trait.SeedableRng.js
implementors/rotor_stream/: trait.Accepted.js  trait.ActiveStream.js
implementors/slab/: trait.Index.js
mio/: struct.Events.html
netbuf/: constant.MAX_BUF_SIZE.html  enum.RangeArgument.html  index.html  sidebar-items.js  struct.Buf.html
netbuf/buf/: sidebar-items.js  struct.Buf.html
netbuf/range/: enum.RangeArgument.html  sidebar-items.js
rotor/: enum.Compose2.html  enum.SpawnError.html  enum.Void.html  enum.WakeupError.html  index.html  macro.rotor_compose!.html  sidebar-items.js  struct.Config.html  struct.EarlyScope.html  struct.EventSet.html  struct.LoopCreator.html  struct.LoopInstance.html  struct.Notifier.html  struct.PollOpt.html  struct.Response.html  struct.Scope.html  struct.Time.html  struct.Timeout.html  struct.TimerError.html  trait.Evented.html  trait.GenericScope.html  trait.Machine.html
rotor/compose/: sidebar-items.js
rotor/config/: sidebar-items.js
rotor/creator/: sidebar-items.js  struct.LoopCreator.html
rotor/error/: sidebar-items.js
rotor/loop_time/: sidebar-items.js
rotor/machine/: sidebar-items.js
rotor/mio/: enum.IpAddr.html  enum.NotifyError.html  index.html  struct.EventLoop.html  struct.EventLoopConfig.html  struct.EventSet.html  struct.Events.html  (+17 more)
rotor_http/: index.html  sidebar-items.js
rotor_stream/: constant.MAX_BUF_SIZE.html  enum.Accept.html  enum.Exception.html  enum.Expectation.html  index.html  sidebar-items.js  struct.Buf.html  struct.Intent.html  struct.IntentBuilder.html  struct.Persistent.html  struct.ProtocolStop.html  struct.Stream.html  struct.Transport.html  trait.Accepted.html  trait.ActiveStream.html  trait.Protocol.html  trait.SocketError.html  trait.StreamSocket.html
rotor_tools/: index.html  sidebar-items.js
slab/: struct.SlabIter.html  struct.SlabMutIter.html
src/: headers.rs  http1.rs  lib.rs  message.rs  recvmode.rs  version.rs
(+439 files in other folders)
